@@ -21,7 +21,8 @@ import io.prometheus.client.exporter.HTTPServer;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.net.InetSocketAddress;
-import java.nio.file.Paths;
+import java.nio.file.Path;
+import java.util.Locale;
 import java.util.concurrent.ExecutorService;
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.CommandLineParser;
@@ -31,9 +32,11 @@ import org.apache.commons.cli.Option;
 import org.apache.commons.cli.Options;
 import org.apache.commons.cli.ParseException;
 import org.apache.commons.codec.digest.DigestUtils;
+import org.apache.solr.common.util.EnvUtils;
 import org.apache.solr.common.util.ExecutorUtil;
 import org.apache.solr.common.util.IOUtils;
 import org.apache.solr.common.util.SolrNamedThreadFactory;
+import org.apache.solr.common.util.SuppressForbidden;
 import org.apache.solr.prometheus.collector.MetricsCollectorFactory;
 import org.apache.solr.prometheus.collector.SchedulerMetricsCollector;
 import org.apache.solr.prometheus.scraper.SolrCloudScraper;
@@ -47,8 +50,7 @@ public class SolrExporter {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   private static final int DEFAULT_PORT = 8989;
-  private static final String DEFAULT_BASE_URL = "http://localhost:8983/solr";
-  private static final String DEFAULT_ZK_HOST = "";
+  private static final String DEFAULT_BASE_URL = getDefaultSolrUrl();
   private static final String DEFAULT_CONFIG = "solr-exporter-config.xml";
   private static final int DEFAULT_SCRAPE_INTERVAL = 60;
   private static final Integer DEFAULT_NUM_THREADS = 1;
@@ -102,7 +104,9 @@ public class SolrExporter {
   }
 
   void stop() {
-    httpServer.stop();
+    if (httpServer != null) {
+      httpServer.stop();
+    }
 
     metricsCollector.removeObserver(prometheusCollector);
 
@@ -145,10 +149,12 @@ public class SolrExporter {
         Option.builder("s")
             .longOpt("solr-url")
             .hasArg()
-            .argName("BASE_URL")
+            .argName("HOST")
             .type(String.class)
             .desc(
-                "Specify the Solr base URL when connecting to Solr in standalone mode. If omitted both the -b parameter and the -z parameter, connect to http://localhost:8983/solr. For example 'http://localhost:8983/solr'.")
+                "Specify the Solr base URL when connecting to Solr in standalone mode. If omitted both the -s parameter and the -z parameter, connect to "
+                    + DEFAULT_BASE_URL
+                    + ".")
             .build();
     mainOptions.addOption(solrUrlOption);
 
@@ -241,7 +247,9 @@ public class SolrExporter {
             .argName("ZK_HOST")
             .type(String.class)
             .desc(
-                "Specify the ZooKeeper connection string when connecting to Solr in SolrCloud mode. If omitted both the -b parameter and the -z parameter, connect to http://localhost:8983/solr. For example 'localhost:2181/solr'.")
+                "Specify the ZooKeeper connection string when connecting to Solr in SolrCloud mode. If omitted both the -s parameter and the -z parameter, connect to "
+                    + DEFAULT_BASE_URL
+                    + ".")
             .build();
     mainOptions.addOption(zkHostOption);
 
@@ -259,24 +267,27 @@ public class SolrExporter {
         return;
       }
 
-      SolrScrapeConfiguration scrapeConfiguration = null;
-
-      String defaultClusterId = "";
-      if (commandLine.hasOption(zkHostOption)) {
-        String zkHost = commandLine.getOptionValue(zkHostOption, DEFAULT_ZK_HOST);
+      final SolrScrapeConfiguration scrapeConfiguration;
+      final String defaultClusterId;
+      String zkHost = getZkHost(commandLine, zkHostOption);
+      if (zkHost != null && !zkHost.isBlank()) {
         defaultClusterId = makeShortHash(zkHost);
         scrapeConfiguration = SolrScrapeConfiguration.solrCloud(zkHost);
       } else if (commandLine.hasOption(solrUrlOption)) {
         String baseUrl = commandLine.getOptionValue(solrUrlOption);
         defaultClusterId = makeShortHash(baseUrl);
         scrapeConfiguration = SolrScrapeConfiguration.standalone(baseUrl);
-      }
-
-      if (scrapeConfiguration == null) {
-        log.error(
-            "Must provide either --{} or --{}",
-            solrUrlOption.getLongOpt(),
-            zkHostOption.getLongOpt());
+      } else {
+        String baseUrl = DEFAULT_BASE_URL;
+        if (log.isInfoEnabled()) {
+          log.info(
+              "Neither --{} or --{} parameters provided so assuming solr url is {}",
+              solrUrlOption.getLongOpt(),
+              zkHostOption.getLongOpt(),
+              baseUrl);
+        }
+        defaultClusterId = makeShortHash(baseUrl);
+        scrapeConfiguration = SolrScrapeConfiguration.standalone(baseUrl);
       }
 
       int port = commandLine.getParsedOptionValue(portOption, DEFAULT_PORT);
@@ -294,9 +305,9 @@ public class SolrExporter {
         log.info("SSL ENABLED");
 
         scrapeConfiguration.withSslConfiguration(
-            Paths.get(getSystemVariable("SOLR_SSL_KEY_STORE")),
+            Path.of(getSystemVariable("SOLR_SSL_KEY_STORE")),
             getSystemVariable("SOLR_SSL_KEY_STORE_PASSWORD"),
-            Paths.get(getSystemVariable("SOLR_SSL_TRUST_STORE")),
+            Path.of(getSystemVariable("SOLR_SSL_TRUST_STORE")),
             getSystemVariable("SOLR_SSL_TRUST_STORE_PASSWORD"));
       }
 
@@ -321,9 +332,9 @@ public class SolrExporter {
           clusterId,
           scrapeConfiguration);
     } catch (IOException e) {
-      log.error("Failed to start Solr Prometheus Exporter: ", e);
+      exit(1, "Failed to start Solr Prometheus Exporter: " + e.getMessage());
     } catch (ParseException e) {
-      log.error("Failed to parse command line arguments: ", e);
+      exit(1, "Failed to parse command line arguments: " + e.getMessage());
     }
   }
 
@@ -348,5 +359,33 @@ public class SolrExporter {
 
   private static String getSystemVariable(String name) {
     return System.getProperty(name, System.getenv(name));
+  }
+
+  @SuppressForbidden(reason = "For use in command line tools only")
+  public static void exit(int exitStatus, String message) {
+    System.err.println(message);
+    try {
+      System.exit(exitStatus);
+    } catch (java.lang.SecurityException secExc) {
+      if (exitStatus != 0)
+        throw new RuntimeException("SolrExporter failed to exit with status " + exitStatus);
+    }
+  }
+
+  // copied over from CLIUtils
+  private static String getDefaultSolrUrl() {
+    // note that ENV_VAR syntax (and the env vars too) are mapped to env.var sys props
+    String scheme = EnvUtils.getProperty("solr.url.scheme", "http");
+    String host = EnvUtils.getProperty("solr.host", "localhost");
+    String port = EnvUtils.getProperty("jetty.port", "8983"); // from SOLR_PORT env
+    return String.format(Locale.ROOT, "%s://%s:%s", scheme.toLowerCase(Locale.ROOT), host, port);
+  }
+
+  public static String getZkHost(CommandLine cli, Option option) {
+    String zkHost = cli.getOptionValue(option);
+    if (zkHost != null && !zkHost.isBlank()) {
+      return zkHost;
+    }
+    return EnvUtils.getProperty("zkHost");
   }
 }
